--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loan-management-app", 
+  "name": "loan-management-app",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -17,7 +17,9 @@
     "@prisma/client": "^6.4.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
